Fix dropdown-menu z-index

--- a/www/src/styles/constants.scss
+++ b/www/src/styles/constants.scss
@@ -166,6 +166,7 @@ $module-finder-search-z-index-sm: 950;
 $navtabs-z-index: 900;
 $navbar-z-index: 890;
 $module-finder-search-z-index-md: 850;
+$zindex-dropdown: 820; // Bootstrap override
 $fab-z-index: 800;
 $side-menu-z-index: 700;
 $side-menu-overlay-z-index: 690;
